force-app/main/default/objects/Transaction__c/fields/Account_c__c.field-meta.xml
<CustomField>
    <fullName>Account_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions_del</relationshipName>
    <type>Lookup</type>
</CustomField>