force-app/main/default/objects/Transaction__c/fields/Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Amount__c</fullName>
    <label>Unit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>