force-app/main/default/objects/Transaction__c/validationRules/Asset_Required_If_Start_Date_Notblank.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Required_If_Start_Date_Notblank</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISBLANK( Start_Date__c  )) &amp;&amp;  ISBLANK( Asset__r.Id )</errorConditionFormula>
    <errorDisplayField>Asset__c</errorDisplayField>
    <errorMessage>Asset should be required when date is started</errorMessage>
</ValidationRule>